[package]
name = "quasimodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib", "rlib"]

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.10.0"
glam = "0.24.0"
log = "0.4.18"
pollster = "0.3.0"
wgpu = "0.16.1"
winit = "0.28.6"

